# neonsignal

./: .babelrc  .clang-format  .clangd  .codebook.toml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  THIRD_PARTY_NOTICES  meson.build  package.json  tsconfig.json
src/: main.c++  meson.build  redirect_main.c++
src/install/: git_cloner.c++  install_command.c++  systemd_service_installer.c++
src/install/git_cloner/: clone_to.c++  execute_git_clone_.c++  extract_repo_name.c++  is_valid_url_.c++
src/install/install_command/: clone_repository_.c++  run.c++  validate_repo_url_.c++  verify_clone_.c++
src/install/systemd_service_installer/: check_root_privileges_.c++  generate_neonsignal_service_.c++  generate_redirect_service_.c++  install.c++  parse_kvp_.c++  populate_defaults_.c++  print_defaults_warning_.c++  print_success_message_.c++  validate_config_.c++  write_service_file_.c++
src/neonsignal/: api_handler.c++  cert_manager.c++  codex_runner.c++  event_loop.c++  hpack_decoder.c++  http2_listener.c++  logging.c++  neonsignal.c++  redirect_service.c++  router.c++  thread_pool.c++  vhost.c++  voltage_argv.c++  webauthn.c++
src/neonsignal/api_handler/: auth_login_finish_headers.c++  auth_login_options.c++  auth_user_check.c++  codex_brief.c++  codex_image.c++  codex_item.c++  codex_list.c++  codex_run_artifacts.c++  codex_run_start.c++  codex_run_status.c++  codex_run_stderr.c++  codex_run_stdout.c++  cpu_stream.c++  events.c++  identify_api_route.c++  incoming_data.c++  memory_stream.c++  redirect_service_stream.c++  stats.c++  user_enroll.c++  user_register.c++  user_verify.c++
src/neonsignal/cert_manager/: get_context.c++  initialize.c++
src/neonsignal/codex_runner/: build_prompt_.c++  get_config_.c++  get_config_bool_.c++  get_config_u64_.c++  run_async_.c++  sanitize_filename_.c++  start_run.c++
src/neonsignal/database/: database.c++  serialization.c++
src/neonsignal/event_loop/: add_fd.c++  add_signal.c++  add_timer.c++  cancel_timer.c++  remove_fd.c++  run.c++  shutdown_graceful.c++  stop.c++  update_fd.c++
src/neonsignal/hpack_decoder/: decode.c++
src/neonsignal/http2_listener/: close_connection_.c++  handle_accept_.c++  handle_connection_.c++  handle_io_.c++  probe_redirect_service_.c++  register_connection_.c++  setup_listener_.c++  shutdown_graceful.c++  start.c++  start_redirect_monitor_.c++  stop_redirect_monitor_.c++
src/neonsignal/install_voltage/: branch.c++  help_text.c++  name.c++  only_save_path.c++  repo.c++  should_install_systemd_service.c++  should_show_help.c++  should_show_version.c++  systemd_service.c++  version_text.c++  www_root.c++
src/neonsignal/platform_utils/: platform_utils.c++
src/neonsignal/redirect_service/: close_connection_.c++  handle_accept_.c++  handle_io_.c++  process_buffer_.c++  register_connection_.c++  send_redirect_.c++  serve_acme_challenge_.c++  setup_listener_.c++  start.c++  stop.c++
src/neonsignal/redirect_voltage/: acme_webroot.c++  help_text.c++  host.c++  instances.c++  is_systemd.c++  port.c++  should_show_help.c++  should_show_version.c++  target_port.c++  version_text.c++
src/neonsignal/router/: resolve.c++
src/neonsignal/server/: configure_credentials.c++  initialize_tls.c++  run.c++  ssl_context_deleter_operator.c++  stop.c++
src/neonsignal/server_voltage/: certs_root.c++  db_path.c++  help_text.c++  host.c++  is_systemd.c++  mail_allowed_ip.c++  mail_command.c++  mail_cookie_name.c++  mail_cookie_ttl.c++  mail_domains.c++  mail_enabled.c++  mail_from.c++  mail_save_db.c++  mail_to_extra.c++  mail_url_hits.c++  port.c++  should_show_help.c++  should_show_version.c++  threads.c++  version_text.c++  webauthn_domain.c++  webauthn_origin.c++  working_dir.c++  www_root.c++
src/neonsignal/socket_utils/: socket_utils.c++
src/neonsignal/thread_pool/: enqueue.c++  worker_.c++
src/neonsignal/vhost/: resolve.c++
src/neonsignal/voltage_argv/: validate_dash_format_.c++
src/spin/: api_handler.c++  cert_manager.c++  codex_runner.c++  event_loop.c++  hpack_decoder.c++  http2_listener.c++  neonsignal.c++  redirect_service.c++  router.c++  thread_pool.c++  vhost.c++  webauthn.c++
src/spin/api_handler/: auth_login_finish_headers.c++  auth_login_options.c++  auth_user_check.c++  codex_brief.c++  codex_image.c++  codex_item.c++  codex_list.c++  codex_run_artifacts.c++  codex_run_start.c++  codex_run_status.c++  codex_run_stderr.c++  codex_run_stdout.c++  cpu_stream.c++  events.c++  identify_api_route.c++  incoming_data.c++  mail_send.c++  memory_stream.c++  redirect_service_stream.c++  stats.c++  user_enroll.c++  user_register.c++  user_verify.c++
src/spin/cert_manager/: get_context.c++  initialize.c++
src/spin/codex_runner/: build_prompt_.c++  get_config_.c++  get_config_bool_.c++  get_config_u64_.c++  run_async_.c++  sanitize_filename_.c++  start_run.c++
src/spin/database/: database.c++  serialization.c++
src/spin/event_loop/: add_fd.c++  add_signal.c++  add_timer.c++  cancel_timer.c++  remove_fd.c++  run.c++  shutdown_graceful.c++  stop.c++  update_fd.c++
src/spin/hpack_decoder/: decode.c++
src/spin/http2_listener/: close_connection_.c++  handle_accept_.c++  handle_connection_.c++  handle_io_.c++  probe_redirect_service_.c++  register_connection_.c++  setup_listener_.c++  shutdown_graceful.c++  start.c++  start_redirect_monitor_.c++  stop_redirect_monitor_.c++
src/spin/mail_cookie_store/: mail_cookie_store.c++
src/spin/mail_service/: calculate_crc32.c++  mail_service.c++  send_async_.c++
src/spin/platform_utils/: platform_utils.c++
src/spin/redirect_service/: close_connection_.c++  handle_accept_.c++  handle_io_.c++  process_buffer_.c++  register_connection_.c++  send_redirect_.c++  serve_acme_challenge_.c++  setup_listener_.c++  start.c++  stop.c++
src/spin/router/: resolve.c++
src/spin/server/: configure_credentials.c++  initialize_tls.c++  run.c++  ssl_context_deleter_operator.c++  stop.c++
src/spin/socket_utils/: socket_utils.c++
src/spin/thread_pool/: enqueue.c++  worker_.c++
themes/sphinx-synthwave-theme/: README.md  pyproject.toml
(+336 files in other folders)
