# neonsignal binary
srcs = [
  'main.c++',
  # api_handler
  'neonsignal/api_handler.c++',
  'neonsignal/api_handler/auth_login_finish_headers.c++',
  'neonsignal/api_handler/auth_login_options.c++',
  'neonsignal/api_handler/auth_user_check.c++',
  'neonsignal/api_handler/user_register.c++',
  'neonsignal/api_handler/user_verify.c++',
  'neonsignal/api_handler/user_enroll.c++',
  'neonsignal/api_handler/codex_brief.c++',
  'neonsignal/api_handler/codex_image.c++',
  'neonsignal/api_handler/codex_item.c++',
  'neonsignal/api_handler/codex_list.c++',
  'neonsignal/api_handler/codex_run_artifacts.c++',
  'neonsignal/api_handler/codex_run_start.c++',
  'neonsignal/api_handler/codex_run_status.c++',
  'neonsignal/api_handler/codex_run_stderr.c++',
  'neonsignal/api_handler/codex_run_stdout.c++',
  'neonsignal/api_handler/cpu_stream.c++',
  'neonsignal/api_handler/events.c++',
  'neonsignal/api_handler/identify_api_route.c++',
  'neonsignal/api_handler/incoming_data.c++',
  'neonsignal/api_handler/memory_stream.c++',
  'neonsignal/api_handler/redirect_service_stream.c++',
  'neonsignal/api_handler/stats.c++',
  # event_loop
  'neonsignal/event_loop.c++',
  'neonsignal/event_loop/add_fd.c++',
  'neonsignal/event_loop/add_timer.c++',
  'neonsignal/event_loop/remove_fd.c++',
  'neonsignal/event_loop/run.c++',
  'neonsignal/event_loop/shutdown_graceful.c++',
  'neonsignal/event_loop/stop.c++',
  'neonsignal/event_loop/update_fd.c++',
  # hpack_decoder
  'neonsignal/hpack_decoder.c++',
  'neonsignal/hpack_decoder/decode.c++',
  # http2_listener
  'neonsignal/http2_listener.c++',
  'neonsignal/http2_listener/close_connection_.c++',
  'neonsignal/http2_listener/handle_accept_.c++',
  'neonsignal/http2_listener/handle_connection_.c++',
  'neonsignal/http2_listener/handle_io_.c++',
  'neonsignal/http2_listener/helper/build_frame.c++',
  'neonsignal/http2_listener/helper/build_response_frames.c++',
  'neonsignal/http2_listener/helper/build_server_settings.c++',
  'neonsignal/http2_listener/helper/build_settings_ack.c++',
  'neonsignal/http2_listener/helper/build_window_update.c++',
  'neonsignal/http2_listener/helper/decode_integer.c++',
  'neonsignal/http2_listener/helper/encode_integer.c++',
  'neonsignal/http2_listener/helper/encode_literal_header_no_index.c++',
  'neonsignal/http2_listener/helper/encode_string.c++',
  'neonsignal/http2_listener/helper/guess_content_type.c++',
  'neonsignal/http2_listener/helper/load_static.c++',
  'neonsignal/http2_listener/helper/make_listen_socket.c++',
  'neonsignal/http2_listener/helper/read_rss_kb.c++',
  'neonsignal/http2_listener/probe_redirect_service_.c++',
  'neonsignal/http2_listener/register_connection_.c++',
  'neonsignal/http2_listener/setup_listener_.c++',
  'neonsignal/http2_listener/start.c++',
  'neonsignal/http2_listener/start_redirect_monitor_.c++',
  'neonsignal/http2_listener/stop_redirect_monitor_.c++',
  # logging
  'neonsignal/logging.c++',
  'neonsignal/voltage_argv.c++',
  'neonsignal/voltage_argv/validate_dash_format_.c++',
  # check
  'neonsignal/voltage_argv/check/check.c++',
  'neonsignal/voltage_argv/check/threads.c++',
  'neonsignal/voltage_argv/check/host.c++',
  'neonsignal/voltage_argv/check/port.c++',
  'neonsignal/voltage_argv/check/webauthn_domain.c++',
  'neonsignal/voltage_argv/check/webauthn_origin.c++',
  'neonsignal/voltage_argv/check/db_path.c++',
  'neonsignal/voltage_argv/check/systemd.c++',
  'neonsignal/voltage_argv/check/instances.c++',
  'neonsignal/voltage_argv/check/redirect_port.c++',
  'neonsignal/voltage_argv/check/target_port.c++',
  'neonsignal/voltage_argv/check/redirect_host.c++',
  'neonsignal/voltage_argv/check/acme_webroot.c++',
  # help
  'neonsignal/voltage_argv/help/help.c++',
  'neonsignal/voltage_argv/help/print.c++',
  'neonsignal/voltage_argv/help/to_string.c++',
  'neonsignal/voltage_argv/help/set_option_list_.c++',
  'neonsignal/voltage_argv/help/remove_leading_hyphens_.c++',
  'neonsignal/voltage_argv/help/stoenum_.c++',
  'neonsignal/voltage_argv/help/get_version_.c++',
  'neonsignal/voltage_argv/help/get_help_topic_.c++',
  'neonsignal/voltage_argv/help/help_.c++',
  'neonsignal/voltage_argv/help/version_.c++',
  'neonsignal/voltage_argv/help/threads_.c++',
  'neonsignal/voltage_argv/help/host_.c++',
  'neonsignal/voltage_argv/help/port_.c++',
  'neonsignal/voltage_argv/help/webauthn_domain_.c++',
  'neonsignal/voltage_argv/help/webauthn_origin_.c++',
  'neonsignal/voltage_argv/help/db_path_.c++',
  'neonsignal/voltage_argv/help/systemd_.c++',
  'neonsignal/voltage_argv/help/instances_.c++',
  'neonsignal/voltage_argv/help/target_port_.c++',
  'neonsignal/voltage_argv/help/acme_webroot_.c++',
  'neonsignal/voltage_argv/help/spin_.c++',
  'neonsignal/voltage_argv/help/unknown_.c++',
  # server_voltage
  'neonsignal/server_voltage/is_systemd.c++',
  'neonsignal/server_voltage/should_show_help.c++',
  'neonsignal/server_voltage/should_show_version.c++',
  'neonsignal/server_voltage/help_text.c++',
  'neonsignal/server_voltage/version_text.c++',
  'neonsignal/server_voltage/threads.c++',
  'neonsignal/server_voltage/host.c++',
  'neonsignal/server_voltage/port.c++',
  'neonsignal/server_voltage/webauthn_domain.c++',
  'neonsignal/server_voltage/webauthn_origin.c++',
  'neonsignal/server_voltage/db_path.c++',
  # neonsignal
  'neonsignal/neonsignal.c++',
  # router
  'neonsignal/router.c++',
  'neonsignal/router/resolve.c++',
  # server
  'neonsignal/server/configure_credentials.c++',
  'neonsignal/server/initialize_tls.c++',
  'neonsignal/server/run.c++',
  'neonsignal/server/ssl_context_deleter_operator.c++',
  'neonsignal/server/stop.c++',
  # thread pool
  'neonsignal/thread_pool.c++',
  'neonsignal/thread_pool/enqueue.c++',
  'neonsignal/thread_pool/worker_.c++',
  # vhost
  'neonsignal/vhost.c++',
  'neonsignal/vhost/resolve.c++',
  # cert_manager
  'neonsignal/cert_manager.c++',
  'neonsignal/cert_manager/initialize.c++',
  'neonsignal/cert_manager/get_context.c++',
  # codex_runner
  'neonsignal/codex_runner.c++',
  'neonsignal/codex_runner/build_prompt_.c++',
  'neonsignal/codex_runner/get_config_.c++',
  'neonsignal/codex_runner/get_config_bool_.c++',
  'neonsignal/codex_runner/get_config_u64_.c++',
  'neonsignal/codex_runner/run_async_.c++',
  'neonsignal/codex_runner/sanitize_filename_.c++',
  'neonsignal/codex_runner/start_run.c++',
  # database
  'neonsignal/database/database.c++',
  'neonsignal/database/serialization.c++',
  # webauthn
  'neonsignal/webauthn.c++',
]

# redirector binary
redirect_srcs = [
  # event_loop
  'neonsignal/event_loop.c++',
  'neonsignal/event_loop/add_fd.c++',
  'neonsignal/event_loop/add_timer.c++',
  'neonsignal/event_loop/remove_fd.c++',
  'neonsignal/event_loop/run.c++',
  'neonsignal/event_loop/shutdown_graceful.c++',
  'neonsignal/event_loop/stop.c++',
  'neonsignal/event_loop/update_fd.c++',
  # logging
  'neonsignal/logging.c++',
  'neonsignal/voltage_argv.c++',
  'neonsignal/voltage_argv/validate_dash_format_.c++',
  # check
  'neonsignal/voltage_argv/check/check.c++',
  'neonsignal/voltage_argv/check/threads.c++',
  'neonsignal/voltage_argv/check/host.c++',
  'neonsignal/voltage_argv/check/port.c++',
  'neonsignal/voltage_argv/check/webauthn_domain.c++',
  'neonsignal/voltage_argv/check/webauthn_origin.c++',
  'neonsignal/voltage_argv/check/db_path.c++',
  'neonsignal/voltage_argv/check/systemd.c++',
  'neonsignal/voltage_argv/check/instances.c++',
  'neonsignal/voltage_argv/check/redirect_port.c++',
  'neonsignal/voltage_argv/check/target_port.c++',
  'neonsignal/voltage_argv/check/redirect_host.c++',
  'neonsignal/voltage_argv/check/acme_webroot.c++',
  # help
  'neonsignal/voltage_argv/help/help.c++',
  'neonsignal/voltage_argv/help/print.c++',
  'neonsignal/voltage_argv/help/to_string.c++',
  'neonsignal/voltage_argv/help/set_option_list_.c++',
  'neonsignal/voltage_argv/help/remove_leading_hyphens_.c++',
  'neonsignal/voltage_argv/help/stoenum_.c++',
  'neonsignal/voltage_argv/help/get_version_.c++',
  'neonsignal/voltage_argv/help/get_help_topic_.c++',
  'neonsignal/voltage_argv/help/help_.c++',
  'neonsignal/voltage_argv/help/version_.c++',
  'neonsignal/voltage_argv/help/threads_.c++',
  'neonsignal/voltage_argv/help/host_.c++',
  'neonsignal/voltage_argv/help/port_.c++',
  'neonsignal/voltage_argv/help/webauthn_domain_.c++',
  'neonsignal/voltage_argv/help/webauthn_origin_.c++',
  'neonsignal/voltage_argv/help/db_path_.c++',
  'neonsignal/voltage_argv/help/systemd_.c++',
  'neonsignal/voltage_argv/help/instances_.c++',
  'neonsignal/voltage_argv/help/target_port_.c++',
  'neonsignal/voltage_argv/help/acme_webroot_.c++',
  'neonsignal/voltage_argv/help/spin_.c++',
  'neonsignal/voltage_argv/help/unknown_.c++',
  # redirect_voltage
  'neonsignal/redirect_voltage/is_systemd.c++',
  'neonsignal/redirect_voltage/should_show_help.c++',
  'neonsignal/redirect_voltage/should_show_version.c++',
  'neonsignal/redirect_voltage/help_text.c++',
  'neonsignal/redirect_voltage/version_text.c++',
  'neonsignal/redirect_voltage/instances.c++',
  'neonsignal/redirect_voltage/port.c++',
  'neonsignal/redirect_voltage/target_port.c++',
  'neonsignal/redirect_voltage/host.c++',
  'neonsignal/redirect_voltage/acme_webroot.c++',
  # redirect_service
  'neonsignal/redirect_service.c++',
  'neonsignal/redirect_service/close_connection_.c++',
  'neonsignal/redirect_service/handle_accept_.c++',
  'neonsignal/redirect_service/handle_io_.c++',
  'neonsignal/redirect_service/process_buffer_.c++',
  'neonsignal/redirect_service/register_connection_.c++',
  'neonsignal/redirect_service/serve_acme_challenge_.c++',
  'neonsignal/redirect_service/send_redirect_.c++',
  'neonsignal/redirect_service/setup_listener_.c++',
  'neonsignal/redirect_service/start.c++',
  'neonsignal/redirect_service/stop.c++',
  'redirect_main.c++',
]

executable('neonsignal',
  srcs,
  include_directories : neonsignal_inc,
  dependencies : [openssl_dep, nghttp2_dep, mdbx_dep, ansi_dep, args_dep],
  cpp_args : ['-DNEONSIGNAL_VERSION="' + neonsignal_version + '"'],
  install : true
)

executable('neonsignal_redirect',
  redirect_srcs,
  include_directories : neonsignal_inc,
  dependencies : [ansi_dep, args_dep],
  cpp_args : ['-DNEONSIGNAL_REDIRECT_VERSION="' + neonsignal_redirect_version + '"'],
  install : true
)
