# Platform-specific event loop backend
if host_machine.system() == 'darwin'
  event_loop_backend = 'spin/event_loop/darwin/backend.c++'
else
  event_loop_backend = 'spin/event_loop/linux/backend.c++'
endif

# Shared sources for event loop and utilities
shared_srcs = [
  # socket_utils
  'spin/socket_utils/socket_utils.c++',
  # platform_utils
  'spin/platform_utils/platform_utils.c++',
  # event_loop backend
  event_loop_backend,
]

# neonsignal binary
srcs = [
  'main.c++',
  # api_handler (spin/)
  'spin/api_handler.c++',
  'spin/api_handler/auth_login_finish_headers.c++',
  'spin/api_handler/auth_login_options.c++',
  'spin/api_handler/auth_user_check.c++',
  'spin/api_handler/user_register.c++',
  'spin/api_handler/user_verify.c++',
  'spin/api_handler/user_enroll.c++',
  'spin/api_handler/codex_brief.c++',
  'spin/api_handler/codex_image.c++',
  'spin/api_handler/codex_item.c++',
  'spin/api_handler/codex_list.c++',
  'spin/api_handler/codex_run_artifacts.c++',
  'spin/api_handler/codex_run_start.c++',
  'spin/api_handler/codex_run_status.c++',
  'spin/api_handler/codex_run_stderr.c++',
  'spin/api_handler/codex_run_stdout.c++',
  'spin/api_handler/cpu_stream.c++',
  'spin/api_handler/events.c++',
  'spin/api_handler/identify_api_route.c++',
  'spin/api_handler/incoming_data.c++',
  'spin/api_handler/mail_send.c++',
  'spin/api_handler/memory_stream.c++',
  'spin/api_handler/redirect_service_stream.c++',
  'spin/api_handler/stats.c++',
  # event_loop (spin/)
  'spin/event_loop.c++',
  'spin/event_loop/add_fd.c++',
  'spin/event_loop/add_signal.c++',
  'spin/event_loop/add_timer.c++',
  'spin/event_loop/cancel_timer.c++',
  'spin/event_loop/remove_fd.c++',
  'spin/event_loop/run.c++',
  'spin/event_loop/shutdown_graceful.c++',
  'spin/event_loop/stop.c++',
  'spin/event_loop/update_fd.c++',
  # hpack_decoder (spin/)
  'spin/hpack_decoder.c++',
  'spin/hpack_decoder/decode.c++',
  # http2_listener (spin/)
  'spin/http2_listener.c++',
  'spin/http2_listener/close_connection_.c++',
  'spin/http2_listener/handle_accept_.c++',
  'spin/http2_listener/handle_connection_.c++',
  'spin/http2_listener/handle_io_.c++',
  'spin/http2_listener/helper/build_frame.c++',
  'spin/http2_listener/helper/build_response_frames.c++',
  'spin/http2_listener/helper/build_server_settings.c++',
  'spin/http2_listener/helper/build_settings_ack.c++',
  'spin/http2_listener/helper/build_window_update.c++',
  'spin/http2_listener/helper/decode_integer.c++',
  'spin/http2_listener/helper/encode_integer.c++',
  'spin/http2_listener/helper/encode_literal_header_no_index.c++',
  'spin/http2_listener/helper/encode_string.c++',
  'spin/http2_listener/helper/guess_content_type.c++',
  'spin/http2_listener/helper/load_static.c++',
  'spin/http2_listener/helper/make_listen_socket.c++',
  'spin/http2_listener/helper/read_rss_kb.c++',
  'spin/http2_listener/probe_redirect_service_.c++',
  'spin/http2_listener/register_connection_.c++',
  'spin/http2_listener/setup_listener_.c++',
  'spin/http2_listener/shutdown_graceful.c++',
  'spin/http2_listener/start.c++',
  'spin/http2_listener/start_redirect_monitor_.c++',
  'spin/http2_listener/stop_redirect_monitor_.c++',
  # logging (neonsignal/)
  'neonsignal/logging.c++',
  # voltage_argv (neonsignal/)
  'neonsignal/voltage_argv.c++',
  'neonsignal/voltage_argv/validate_dash_format_.c++',
  # check (neonsignal/)
  'neonsignal/voltage_argv/check/check.c++',
  'neonsignal/voltage_argv/check/threads.c++',
  'neonsignal/voltage_argv/check/host.c++',
  'neonsignal/voltage_argv/check/port.c++',
  'neonsignal/voltage_argv/check/webauthn_domain.c++',
  'neonsignal/voltage_argv/check/webauthn_origin.c++',
  'neonsignal/voltage_argv/check/db_path.c++',
  'neonsignal/voltage_argv/check/www_root.c++',
  'neonsignal/voltage_argv/check/certs_root.c++',
  'neonsignal/voltage_argv/check/working_dir.c++',
  'neonsignal/voltage_argv/check/mail_enabled.c++',
  'neonsignal/voltage_argv/check/mail_domains.c++',
  'neonsignal/voltage_argv/check/mail_cookie_name.c++',
  'neonsignal/voltage_argv/check/mail_cookie_ttl.c++',
  'neonsignal/voltage_argv/check/mail_url_hits.c++',
  'neonsignal/voltage_argv/check/mail_from.c++',
  'neonsignal/voltage_argv/check/mail_to_extra.c++',
  'neonsignal/voltage_argv/check/mail_command.c++',
  'neonsignal/voltage_argv/check/mail_allowed_ip.c++',
  'neonsignal/voltage_argv/check/mail_save_db.c++',
  'neonsignal/voltage_argv/check/systemd.c++',
  'neonsignal/voltage_argv/check/instances.c++',
  'neonsignal/voltage_argv/check/redirect_port.c++',
  'neonsignal/voltage_argv/check/target_port.c++',
  'neonsignal/voltage_argv/check/redirect_host.c++',
  'neonsignal/voltage_argv/check/acme_webroot.c++',
  'neonsignal/voltage_argv/check/repo.c++',
  'neonsignal/voltage_argv/check/install_name.c++',
  'neonsignal/voltage_argv/check/branch.c++',
  'neonsignal/voltage_argv/check/systemd_service.c++',
  'neonsignal/voltage_argv/check/only_save_path.c++',
  # help (neonsignal/)
  'neonsignal/voltage_argv/help/help.c++',
  'neonsignal/voltage_argv/help/mode.c++',
  'neonsignal/voltage_argv/help/set_mode.c++',
  'neonsignal/voltage_argv/help/print.c++',
  'neonsignal/voltage_argv/help/set_redirect_mode.c++',
  'neonsignal/voltage_argv/help/set_server_mode.c++',
  'neonsignal/voltage_argv/help/to_string.c++',
  'neonsignal/voltage_argv/help/set_option_list_.c++',
  'neonsignal/voltage_argv/help/remove_leading_hyphens_.c++',
  'neonsignal/voltage_argv/help/stoenum_.c++',
  'neonsignal/voltage_argv/help/get_version_.c++',
  'neonsignal/voltage_argv/help/get_help_topic_.c++',
  'neonsignal/voltage_argv/help/help_.c++',
  'neonsignal/voltage_argv/help/version_.c++',
  'neonsignal/voltage_argv/help/threads_.c++',
  'neonsignal/voltage_argv/help/host_.c++',
  'neonsignal/voltage_argv/help/port_.c++',
  'neonsignal/voltage_argv/help/webauthn_domain_.c++',
  'neonsignal/voltage_argv/help/webauthn_origin_.c++',
  'neonsignal/voltage_argv/help/db_path_.c++',
  'neonsignal/voltage_argv/help/www_root_.c++',
  'neonsignal/voltage_argv/help/certs_root_.c++',
  'neonsignal/voltage_argv/help/working_dir_.c++',
  'neonsignal/voltage_argv/help/mail_enabled_.c++',
  'neonsignal/voltage_argv/help/mail_domains_.c++',
  'neonsignal/voltage_argv/help/mail_cookie_name_.c++',
  'neonsignal/voltage_argv/help/mail_cookie_ttl_.c++',
  'neonsignal/voltage_argv/help/mail_url_hits_.c++',
  'neonsignal/voltage_argv/help/mail_from_.c++',
  'neonsignal/voltage_argv/help/mail_to_extra_.c++',
  'neonsignal/voltage_argv/help/mail_command_.c++',
  'neonsignal/voltage_argv/help/mail_allowed_ip_.c++',
  'neonsignal/voltage_argv/help/mail_save_db_.c++',
  'neonsignal/voltage_argv/help/systemd_.c++',
  'neonsignal/voltage_argv/help/instances_.c++',
  'neonsignal/voltage_argv/help/target_port_.c++',
  'neonsignal/voltage_argv/help/acme_webroot_.c++',
  'neonsignal/voltage_argv/help/spin_.c++',
  'neonsignal/voltage_argv/help/install_.c++',
  'neonsignal/voltage_argv/help/repo_.c++',
  'neonsignal/voltage_argv/help/name_.c++',
  'neonsignal/voltage_argv/help/branch_.c++',
  'neonsignal/voltage_argv/help/systemd_service_.c++',
  'neonsignal/voltage_argv/help/only_save_.c++',
  'neonsignal/voltage_argv/help/unknown_.c++',
  # server_voltage (neonsignal/)
  'neonsignal/server_voltage/is_systemd.c++',
  'neonsignal/server_voltage/should_show_help.c++',
  'neonsignal/server_voltage/should_show_version.c++',
  'neonsignal/server_voltage/help_text.c++',
  'neonsignal/server_voltage/version_text.c++',
  'neonsignal/server_voltage/threads.c++',
  'neonsignal/server_voltage/host.c++',
  'neonsignal/server_voltage/port.c++',
  'neonsignal/server_voltage/webauthn_domain.c++',
  'neonsignal/server_voltage/webauthn_origin.c++',
  'neonsignal/server_voltage/db_path.c++',
  'neonsignal/server_voltage/www_root.c++',
  'neonsignal/server_voltage/certs_root.c++',
  'neonsignal/server_voltage/working_dir.c++',
  'neonsignal/server_voltage/mail_enabled.c++',
  'neonsignal/server_voltage/mail_domains.c++',
  'neonsignal/server_voltage/mail_cookie_name.c++',
  'neonsignal/server_voltage/mail_cookie_ttl.c++',
  'neonsignal/server_voltage/mail_url_hits.c++',
  'neonsignal/server_voltage/mail_from.c++',
  'neonsignal/server_voltage/mail_to_extra.c++',
  'neonsignal/server_voltage/mail_command.c++',
  'neonsignal/server_voltage/mail_allowed_ip.c++',
  'neonsignal/server_voltage/mail_save_db.c++',
  # install_voltage (neonsignal/)
  'neonsignal/install_voltage/repo.c++',
  'neonsignal/install_voltage/www_root.c++',
  'neonsignal/install_voltage/name.c++',
  'neonsignal/install_voltage/branch.c++',
  'neonsignal/install_voltage/should_install_systemd_service.c++',
  'neonsignal/install_voltage/systemd_service.c++',
  'neonsignal/install_voltage/only_save_path.c++',
  'neonsignal/install_voltage/should_show_help.c++',
  'neonsignal/install_voltage/should_show_version.c++',
  'neonsignal/install_voltage/help_text.c++',
  'neonsignal/install_voltage/version_text.c++',
  # neonsignal server (spin/)
  'spin/neonsignal.c++',
  # router (spin/)
  'spin/router.c++',
  'spin/router/resolve.c++',
  # server (spin/)
  'spin/server/configure_credentials.c++',
  'spin/server/initialize_tls.c++',
  'spin/server/run.c++',
  'spin/server/ssl_context_deleter_operator.c++',
  'spin/server/stop.c++',
  # thread pool (spin/)
  'spin/thread_pool.c++',
  'spin/thread_pool/enqueue.c++',
  'spin/thread_pool/worker_.c++',
  # vhost (spin/)
  'spin/vhost.c++',
  'spin/vhost/resolve.c++',
  # cert_manager (spin/)
  'spin/cert_manager.c++',
  'spin/cert_manager/initialize.c++',
  'spin/cert_manager/get_context.c++',
  # codex_runner (spin/)
  'spin/codex_runner.c++',
  'spin/codex_runner/build_prompt_.c++',
  'spin/codex_runner/get_config_.c++',
  'spin/codex_runner/get_config_bool_.c++',
  'spin/codex_runner/get_config_u64_.c++',
  'spin/codex_runner/run_async_.c++',
  'spin/codex_runner/sanitize_filename_.c++',
  'spin/codex_runner/start_run.c++',
  # mail_cookie_store (spin/)
  'spin/mail_cookie_store/mail_cookie_store.c++',
  # mail_service (spin/)
  'spin/mail_service/mail_service.c++',
  'spin/mail_service/send_async_.c++',
  'spin/mail_service/calculate_crc32.c++',
  # database (spin/)
  'spin/database/database.c++',
  'spin/database/serialization.c++',
  # webauthn (spin/)
  'spin/webauthn.c++',
  # install command (install/)
  'install/install_command.c++',
  'install/install_command/run.c++',
  'install/install_command/validate_repo_url_.c++',
  'install/install_command/clone_repository_.c++',
  'install/install_command/verify_clone_.c++',
  'install/git_cloner.c++',
  'install/git_cloner/clone_to.c++',
  'install/git_cloner/extract_repo_name.c++',
  'install/git_cloner/is_valid_url_.c++',
  'install/git_cloner/execute_git_clone_.c++',
  'install/systemd_service_installer.c++',
  'install/systemd_service_installer/install.c++',
  'install/systemd_service_installer/populate_defaults_.c++',
  'install/systemd_service_installer/parse_kvp_.c++',
  'install/systemd_service_installer/validate_config_.c++',
  'install/systemd_service_installer/check_root_privileges_.c++',
  'install/systemd_service_installer/generate_neonsignal_service_.c++',
  'install/systemd_service_installer/generate_redirect_service_.c++',
  'install/systemd_service_installer/write_service_file_.c++',
  'install/systemd_service_installer/print_defaults_warning_.c++',
  'install/systemd_service_installer/print_success_message_.c++',
]

# Add shared sources (platform utils, socket utils, backend)
srcs += shared_srcs

# redirector binary
redirect_srcs = [
  # event_loop (spin/)
  'spin/event_loop.c++',
  'spin/event_loop/add_fd.c++',
  'spin/event_loop/add_signal.c++',
  'spin/event_loop/add_timer.c++',
  'spin/event_loop/cancel_timer.c++',
  'spin/event_loop/remove_fd.c++',
  'spin/event_loop/run.c++',
  'spin/event_loop/shutdown_graceful.c++',
  'spin/event_loop/stop.c++',
  'spin/event_loop/update_fd.c++',
  # logging (neonsignal/)
  'neonsignal/logging.c++',
  # voltage_argv (neonsignal/)
  'neonsignal/voltage_argv.c++',
  'neonsignal/voltage_argv/validate_dash_format_.c++',
  # check (neonsignal/)
  'neonsignal/voltage_argv/check/check.c++',
  'neonsignal/voltage_argv/check/threads.c++',
  'neonsignal/voltage_argv/check/host.c++',
  'neonsignal/voltage_argv/check/port.c++',
  'neonsignal/voltage_argv/check/webauthn_domain.c++',
  'neonsignal/voltage_argv/check/webauthn_origin.c++',
  'neonsignal/voltage_argv/check/db_path.c++',
  'neonsignal/voltage_argv/check/www_root.c++',
  'neonsignal/voltage_argv/check/certs_root.c++',
  'neonsignal/voltage_argv/check/working_dir.c++',
  'neonsignal/voltage_argv/check/mail_enabled.c++',
  'neonsignal/voltage_argv/check/mail_domains.c++',
  'neonsignal/voltage_argv/check/mail_cookie_name.c++',
  'neonsignal/voltage_argv/check/mail_cookie_ttl.c++',
  'neonsignal/voltage_argv/check/mail_url_hits.c++',
  'neonsignal/voltage_argv/check/mail_from.c++',
  'neonsignal/voltage_argv/check/mail_to_extra.c++',
  'neonsignal/voltage_argv/check/mail_command.c++',
  'neonsignal/voltage_argv/check/mail_allowed_ip.c++',
  'neonsignal/voltage_argv/check/mail_save_db.c++',
  'neonsignal/voltage_argv/check/systemd.c++',
  'neonsignal/voltage_argv/check/instances.c++',
  'neonsignal/voltage_argv/check/redirect_port.c++',
  'neonsignal/voltage_argv/check/target_port.c++',
  'neonsignal/voltage_argv/check/redirect_host.c++',
  'neonsignal/voltage_argv/check/acme_webroot.c++',
  'neonsignal/voltage_argv/check/repo.c++',
  'neonsignal/voltage_argv/check/install_name.c++',
  'neonsignal/voltage_argv/check/branch.c++',
  'neonsignal/voltage_argv/check/systemd_service.c++',
  # help (neonsignal/)
  'neonsignal/voltage_argv/help/help.c++',
  'neonsignal/voltage_argv/help/mode.c++',
  'neonsignal/voltage_argv/help/set_mode.c++',
  'neonsignal/voltage_argv/help/print.c++',
  'neonsignal/voltage_argv/help/set_redirect_mode.c++',
  'neonsignal/voltage_argv/help/set_server_mode.c++',
  'neonsignal/voltage_argv/help/to_string.c++',
  'neonsignal/voltage_argv/help/set_option_list_.c++',
  'neonsignal/voltage_argv/help/remove_leading_hyphens_.c++',
  'neonsignal/voltage_argv/help/stoenum_.c++',
  'neonsignal/voltage_argv/help/get_version_.c++',
  'neonsignal/voltage_argv/help/get_help_topic_.c++',
  'neonsignal/voltage_argv/help/help_.c++',
  'neonsignal/voltage_argv/help/version_.c++',
  'neonsignal/voltage_argv/help/threads_.c++',
  'neonsignal/voltage_argv/help/host_.c++',
  'neonsignal/voltage_argv/help/port_.c++',
  'neonsignal/voltage_argv/help/webauthn_domain_.c++',
  'neonsignal/voltage_argv/help/webauthn_origin_.c++',
  'neonsignal/voltage_argv/help/db_path_.c++',
  'neonsignal/voltage_argv/help/www_root_.c++',
  'neonsignal/voltage_argv/help/certs_root_.c++',
  'neonsignal/voltage_argv/help/working_dir_.c++',
  'neonsignal/voltage_argv/help/mail_enabled_.c++',
  'neonsignal/voltage_argv/help/mail_domains_.c++',
  'neonsignal/voltage_argv/help/mail_cookie_name_.c++',
  'neonsignal/voltage_argv/help/mail_cookie_ttl_.c++',
  'neonsignal/voltage_argv/help/mail_url_hits_.c++',
  'neonsignal/voltage_argv/help/mail_from_.c++',
  'neonsignal/voltage_argv/help/mail_to_extra_.c++',
  'neonsignal/voltage_argv/help/mail_command_.c++',
  'neonsignal/voltage_argv/help/mail_allowed_ip_.c++',
  'neonsignal/voltage_argv/help/mail_save_db_.c++',
  'neonsignal/voltage_argv/help/systemd_.c++',
  'neonsignal/voltage_argv/help/instances_.c++',
  'neonsignal/voltage_argv/help/target_port_.c++',
  'neonsignal/voltage_argv/help/acme_webroot_.c++',
  'neonsignal/voltage_argv/help/spin_.c++',
  'neonsignal/voltage_argv/help/install_.c++',
  'neonsignal/voltage_argv/help/repo_.c++',
  'neonsignal/voltage_argv/help/name_.c++',
  'neonsignal/voltage_argv/help/branch_.c++',
  'neonsignal/voltage_argv/help/systemd_service_.c++',
  'neonsignal/voltage_argv/help/only_save_.c++',
  'neonsignal/voltage_argv/help/unknown_.c++',
  # redirect_voltage (neonsignal/)
  'neonsignal/redirect_voltage/is_systemd.c++',
  'neonsignal/redirect_voltage/should_show_help.c++',
  'neonsignal/redirect_voltage/should_show_version.c++',
  'neonsignal/redirect_voltage/help_text.c++',
  'neonsignal/redirect_voltage/version_text.c++',
  'neonsignal/redirect_voltage/instances.c++',
  'neonsignal/redirect_voltage/port.c++',
  'neonsignal/redirect_voltage/target_port.c++',
  'neonsignal/redirect_voltage/host.c++',
  'neonsignal/redirect_voltage/acme_webroot.c++',
  # redirect_service (spin/)
  'spin/redirect_service.c++',
  'spin/redirect_service/close_connection_.c++',
  'spin/redirect_service/handle_accept_.c++',
  'spin/redirect_service/handle_io_.c++',
  'spin/redirect_service/process_buffer_.c++',
  'spin/redirect_service/register_connection_.c++',
  'spin/redirect_service/serve_acme_challenge_.c++',
  'spin/redirect_service/send_redirect_.c++',
  'spin/redirect_service/setup_listener_.c++',
  'spin/redirect_service/start.c++',
  'spin/redirect_service/stop.c++',
  'redirect_main.c++',
]

redirect_srcs += shared_srcs

executable('neonsignal',
  srcs,
  include_directories : neonsignal_inc,
  dependencies : [openssl_dep, nghttp2_dep, mdbx_dep, ansi_dep, args_dep],
  cpp_args : ['-DNEONSIGNAL_VERSION="' + neonsignal_version + '"'],
  install : true
)

executable('neonsignal_redirect',
  redirect_srcs,
  include_directories : neonsignal_inc,
  dependencies : [ansi_dep, args_dep],
  cpp_args : ['-DNEONSIGNAL_REDIRECT_VERSION="' + neonsignal_redirect_version + '"'],
  install : true
)
